Fix: build errors

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,9 @@
         <![endif]-->
     {{ partial "nav.html" . }}
     <main>
+        {{ if .Site.Data.company.SEO_options }}
+            hello
+        {{ end }}
         <!-- Render any additional page content below the page's content blocks -->
         {{ block "main" . }}{{ end }}
     </main>
