--- a/layouts/partials/portfolio-list.html
+++ b/layouts/partials/portfolio-list.html
@@ -1,7 +1,7 @@
 {{ partial "bookshop_bindings" `.Params.hero_blocks` }}
 {{ partial "bookshop_partial" (slice "page" .Params.hero_blocks) }} 
 
-<section class="portfolio">
+<section data-pagefind-ignore class="portfolio">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
