--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
-    <!-- Loop through any structures in the front-matter and render them -->
-    {{ partial "bookshop_bindings" `.Params.content_blocks` }}
-    {{ partial "bookshop_partial" (slice "page" .Params.content_blocks) }}
+    <div data-pagefind-body>
+        <!-- Loop through any structures in the front-matter and render them -->
+        {{ partial "bookshop_bindings" `.Params.content_blocks` }}
+        {{ partial "bookshop_partial" (slice "page" .Params.content_blocks) }}
+    </div>
 {{ end }}
