--- a/layouts/partials/blog-list.html
+++ b/layouts/partials/blog-list.html
@@ -7,7 +7,7 @@
     {{ partial "bookshop_partial" (slice "page" $hero.Params.hero_blocks) }} 
 {{ end }}
 
-<section data-pagefind-ignore class="blog">
+<section class="blog">
     <div class="container">
         <div class="row">
             {{ if .Params.content_blocks }}
