--- a/layouts/partials/blog-right-column.html
+++ b/layouts/partials/blog-right-column.html
@@ -1,4 +1,4 @@
-<div class="col-md-3" data-pagefind-ignore>
+<div class="col-md-3">
     <!-- Blog Right Sections 
 =========================-->
     <div class="blog-sidbar">
